# nineteen

./: .dockerignore  .gitignore  1_symmetric_keys.encrypted  2_symmetric_keys.encrypted  README.md  SOLUTION.md  Taskfile.yml  bootstrap.sh  changelog.md  cli.py  cli.sh  docker-compose.contender-test.yml  docker-compose.dev.yml  docker-compose.old.yml  docker-compose.prod.yml  docker-compose.testing.yml  docker-compose.utils.yml  docker-compose.yml  encryption_keys.py  migrate.sh  miner.py  pyproject.toml  requirements.txt  ruff.toml  run_test.sh  setup.py  start_miners.sh  test.py  todo.md  todos.md  validator.py  validator_autoupdater.sh  vision.py  z_communication.py
core/: __init__.py  constants.py  create_config.py  dataclasses.py  example_config.py  log.py  logging.py  pyproject.toml  requirements.txt  task_config.py  tasks.py  tasks_config.py  utils.py
core/bittensor_overrides/: __init__.py  axon.py  chain_data.py  config.py  dendrite.py  networking.py  stream.py  synapse.py
core/bittensor_overrides/utils/: __init__.py  networking.py
core/models/: base_models.py  config_models.py  payload_models.py  request_models.py  utility_models.py  validator_models.py
validator/client_node/: main.py  pyproject.toml  requirements.txt
validator/client_node/src/: main.py
validator/client_node/src/text/: main.py
validator/client_node/text/: main.py
validator/control_center/: pyproject.toml
validator/control_center/src/: main.py  refresh_participants.py  schedule_synthetics.py
validator/control_center/src/get_rewards/: main.py
validator/control_center/src/manage_participants/: refresh_participants.py  scheduling_participants.py
validator/control_center/src/store_synthetic_data/: generate_synthetic_data.py  synthetic_generation_funcs.py
validator/control_center/tests/: test_schedule_synthetic_queries.py  test_schedule_synthetics.py
validator/core/: main.py  pyproject.toml  requirements.txt
validator/core/calculate_weights/: calculations.py  main.py
validator/core/core_validator/: core_validator.py
validator/core/get_rewards/: main.py
validator/core/manage_participants/: fetch_participants.py  get_participant_info.py  scheduling_participants.py
validator/core/src/: main.py
validator/core/src/calculate_weights/: calculations.py
validator/core/store_synthetic_data/: generate_synthetic_data.py  synthetic_generation_funcs.py  synthetic_generation_manager.py  synthetic_generations.py
validator/core/weight_setting/: calculations.py  main.py
validator/metagraph_syncer/: metagraph_syncer.py  pyproject.toml  requirements.txt
validator/query_node/: main.py  pyproject.toml  query_node.py  query_node.txt  requirements.txt  utils.py
validator/query_node/src/: main.py  process_queries.py  query.py  query_config.py  select_contenders.py  utils.py
validator/query_node/tests/: test_contenders.py
validator/signing_service/: constants.py  dendrite.py  main.py  pyproject.toml  requirements.txt  retry.py  signing_dataclasses.py  signing_service.py  utils.py  weight_setter.py
validator/signing_service/src/: main.py  utils.py
(+608 files in other folders)
