[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "core"
version = "1.0.0"
description = "Core utilities for your project"
dynamic = ["dependencies"]

[tool.setuptools.packages.find]
where = ["."]
include = ["core*"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }
