[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chain_node"
version = "1.0.0"
description = "Interacts with the chain - without holding any private key information"
dynamic = ["dependencies"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["client_node*"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }
