[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "validator_core"
version = "1.0.0"
description = "Core stuff for the validator; does not need horizontal scaling"
dynamic = ["dependencies"]

[tool.setuptools.packages.find]
where = ["."]
include = ["core*"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }
