[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "metagraph_syncer"
version = "1.0.0"
description = "Syncs metagraph every X minutes"
dynamic = ["dependencies"]

[tool.setuptools.packages.find]
where = ["."]
include = ["query_node*"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }
