[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "signing_service"
version = "1.0.0"
description = "Handles the private keys for signing anything needed, and only that"
dynamic = ["dependencies"]

[tool.setuptools.packages.find]
where = ["."]
include = ["signing_service*"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }
